--- a/rent-a-car/resources/css/app.css
+++ b/rent-a-car/resources/css/app.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+    font-family: "Work Sans";
+    src: url(../font/WorkSans-VariableFont_wght.ttf);
+}
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -14,5 +18,6 @@
 .work-sans {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
+    font-weight: 500;
     font-style: normal;
-  }
+}
